--- a/index.html
+++ b/index.html
@@ -147,8 +147,24 @@
         </section>
 
         <!-- last update  -->
-        <section>
+        <section class="md:flex">
+            <div>
+                <!-- card-1 -->
+                 <div class="flex">
+                    <div class=""> 
+                        <img class="" src="./icons/house.png" alt="">
+                    </div>
+                    <div>
+                        <h4>Find the Perfect Fit</h4>
+                        <p>Everybody is different, which is why we <br>
+                            offer styles for every body.</p>
+                    </div>
+                 </div>
+            </div>
 
+            <div class="w-[50%]">
+                <img src="./images/shopping.png" alt="">
+            </div>
         </section>
 
     </main>
