last section added

--- a/index.html
+++ b/index.html
@@ -147,22 +147,44 @@
         </section>
 
         <!-- last update  -->
-        <section class="md:flex">
+        <section class="grid grid-cols-1 md:grid-cols-2 gap-5 items-center my-20 justify-center">
             <div>
                 <!-- card-1 -->
-                 <div class="flex">
+                 <div class="flex items-center mb-5 p-4 w-10/12 gap-5 rounded-xl shadow-xl">
                     <div class=""> 
-                        <img class="" src="./icons/house.png" alt="">
+                        <img class="w-20" src="./icons/house.png" alt="">
                     </div>
                     <div>
-                        <h4>Find the Perfect Fit</h4>
-                        <p>Everybody is different, which is why we <br>
+                        <h4 class="font-bold">Find the Perfect Fit</h4>
+                        <p class="text-xs mt-3">Everybody is different, which is why we <br>
+                            offer styles for every body.</p>
+                    </div>
+                 </div>
+                <!-- card-2 -->
+                 <div class="flex items-center mb-5 p-4 w-10/12 gap-5 rounded-xl shadow-xl">
+                    <div class=""> 
+                        <img class="w-20" src="./icons/box.png" alt="">
+                    </div>
+                    <div>
+                        <h4 class="font-bold">Free Exchanges</h4>
+                        <p class="text-xs mt-3">Everybody is different, which is why we <br>
+                            offer styles for every body.</p>
+                    </div>
+                 </div>
+                <!-- card-3 -->
+                 <div class="flex items-center mb-5 p-4 w-10/12 gap-5 rounded-xl shadow-xl">
+                    <div class=""> 
+                        <img class="w-20" src="./icons/question.png" alt="">
+                    </div>
+                    <div>
+                        <h4 class="font-bold">Contact Our Seller</h4>
+                        <p class="text-xs mt-3">Everybody is different, which is why we <br>
                             offer styles for every body.</p>
                     </div>
                  </div>
             </div>
 
-            <div class="w-[50%]">
+            <div class="">
                 <img src="./images/shopping.png" alt="">
             </div>
         </section>
